apply style to add case detail modal  - add correct spacing and fonts to all elements of the modal  - amend btn upload css so white-space is set to nowrap

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -153,8 +153,9 @@
     }
 
     &.btn-file-upload {
-        max-width: 12rem;
+        max-width: 15rem;
         text-overflow: ellipsis;
+        white-space: nowrap;
         position: relative;
         .btn-close {
             position: absolute;
